modified:   updated_rag_notebook.ipynb

--- a/updated_rag_notebook.ipynb
+++ b/updated_rag_notebook.ipynb
@@ -16,11 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
+    "\n",
+    "import streamlit as st\n",
+    "import logging\n",
+    "import os\n",
+    "import tempfile\n",
+    "import shutil\n",
+    "import pdfplumber\n",
+    "import ollama\n",
+    "\n",
     "from langchain_community.document_loaders import UnstructuredPDFLoader\n",
     "from langchain_ollama import OllamaEmbeddings\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
